integration of animation JS in sider and components of cards

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <section class="section-burguer-menu">
-            <span class="burguer-menu"></span>
+            <button class="hamburguer">
+                <div class="bar"></div>
+            </button>
             <a href="" class="title"> <div class="circle"></div>WORKSPACE 1</a>
             <div class="input-search">
                 <span class="search"></span>
@@ -29,13 +31,28 @@
         </section>
 
     </header>
-    <aside class="asider-bar">
+    <aside class="asider-bar" id="asiderMenuBar" >
+        <a href="index.html"><section class="section-logo">
+        </section></a>
+        <section class="section-profile">
+            <img src="https://lh3.googleusercontent.com/ogw/ADea4I42bCZd6fgDFej2nslkeHgEfS1M0msCYJcxGvSf=s64-c-mo" alt="">
+            <p class="bar-name">Christian Oliver</p>
+            <p class="bar-email">c.oliversolano@gmail.com</p>
+        </section>
         <nav>
-
+            <ul>
+                <li><div class="circle-white"></div>WORKSPACE 1</li>
+                <li><div class="circle-red"></div>WORKSPACE 2</li>
+                <li><a href="analysis.html"><div class="circle-yellow"></div>ANALYSIS</a></li>
+                <li><div class="circle-green"></div>WORKSPACE 4</li>
+                <li><div class="circle-cedetblue"></div>WORKSPACE 5</li>
+                <li><div class="circle-blue"></div>WORKSPACE 6</li>
+            </ul>
         </nav>
     </aside>
     <main>
 
     </main>
 </body>
+<script src="./JS/functions.js" ></script>
 </html>
